tests/knowledge/context/azure/scenarios/cross_version/logic_app_workflow/basic/dev/application-security-groups.json
{
    "value": [],
    "urls": [
        "https://management.azure.com/subscriptions/230613d8-3b34-4790-b650-36f31045f19a/providers/Microsoft.Network/applicationSecurityGroups?api-version=2020-11-01"
    ]
}
