tests/knowledge/context/azure/scenarios/cross_version/logic_app_workflow/basic/dev/virtual-network-gateways.json
{
    "value": [],
    "urls": [
        "https://management.azure.com/subscriptions/230613d8-3b34-4790-b650-36f31045f19a/resourceGroups/NetworkWatcherRG/providers/Microsoft.Network/virtualNetworkGateways?api-version=2020-11-01",
        "https://management.azure.com/subscriptions/230613d8-3b34-4790-b650-36f31045f19a/resourceGroups/do-not-delete/providers/Microsoft.Network/virtualNetworkGateways?api-version=2020-11-01",
        "https://management.azure.com/subscriptions/230613d8-3b34-4790-b650-36f31045f19a/resourceGroups/cr3690-RG/providers/Microsoft.Network/virtualNetworkGateways?api-version=2020-11-01",
        "https://management.azure.com/subscriptions/230613d8-3b34-4790-b650-36f31045f19a/resourceGroups/cr3686-RG/providers/Microsoft.Network/virtualNetworkGateways?api-version=2020-11-01",
        "https://management.azure.com/subscriptions/230613d8-3b34-4790-b650-36f31045f19a/resourceGroups/knowledge-tests/providers/Microsoft.Network/virtualNetworkGateways?api-version=2020-11-01"
    ]
}
